<resources>
    <string name="app_name">今天麻麻不在家</string>
    <string name="more">更多</string>
    <string name="welcome">欢迎界面</string>
    <string name="ActivityMainTitle">商城</string>
    <string name="fab_1">极速洁</string>
    <string name="fab_2">套餐商城</string>
    <string name="fab_3">麻麻说</string>
    <string name="fab_4">选我就对</string>
    <string name="fab_5">用户中心</string>

    <string name="chongzhi">充值</string>
    <string name="logo">logo</string>
    <string name="set">设置</string>
    <string name="avatar">用户头像</string>
    <string name="addressManage">地址管理</string>
    <string name="recharge">充值</string>
    <string name="youhuijuan">优惠卷</string>
    <string name="youhuihuodong">优惠活动</string>
    <string name="zhanghaoanquan">帐号安全</string>
    <string name="myConcern">我的收藏</string>
    <string name="mymassage">我的消息</string>
    <string name="setting">设置</string>

    <!-- Strings related to login -->
    <string name="prompt_email_login">手机号</string>
    <string name="prompt_password_login">密码</string>
    <string name="action_sign_in_login">登 录</string>
    <string name="action_sign_in_short_login">Sign in</string>
    <string name="error_invalid_email_login">帐号格式不正确</string>
    <string name="error_invalid_password_login">密码太短</string>
    <string name="error_incorrect_password_login">密码错误</string>
    <string name="error_field_required_login">此项必填</string>
    <string name="permission_rationale_login">"？"</string>

    <!-- Strings related to regist -->
    <string name="prompt_autcode">重复密码</string>
    <string name="prompt_email">手机号</string>
    <string name="prompt_code">验证码</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登 录</string>
    <string name="action_regist">注 册</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">请输入正确的手机号</string>
    <string name="error_invalid_password">密码长度必须大于等于6位</string>
    <string name="error_incorrect_password">密码错误</string>
    <string name="error_incorrect_repassword">两次输入不一致</string>
    <string name="error_field_required">此项必填</string>
    <string name="error_field_code">验证码必填</string>
    <string name="error_field_autcode">授权码必填</string>
    <string name="permission_rationale">"？"</string>
    <string name="title_activity_rigist">Rigist in</string>
    <string name="title_activity_login">Sign in</string>
    <string name="cannot_sign">无法登录？</string>
    <string name="cannot_regist">无法注册？</string>
    <string name="no_sign">立即注册！</string>
    <string name="agreement">用户协议</string>
    <string name="autcode">获取授权码</string>
    <string name="my_autcode">我的授权码</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">设置</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">用户昵称</string>
    <string name="pref_default_display_name">N/A</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

</resources>
