
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cqnu.com.housekeeping.Activity.RegistActivity">
    <include layout="@layout/universal_titlebar" />

    <!-- Login progress -->
    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/avloadingIndicatorView_BallClipRotatePulse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_margin="8dp"
        app:indicator="BallClipRotatePulse"
        app:indicator_color="@color/fab"

        />
    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/repassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_autcode"
                    android:maxLines="1"
                    android:inputType="textPassword"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <android.support.design.widget.TextInputLayout
                android:layout_width="242dp"
                android:layout_height="wrap_content"
                android:id="@+id/textInputLayout">

                <AutoCompleteTextView
                    android:id="@+id/code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_code"
                    android:maxLines="1"
                    android:singleLine="true"
                    />

            </android.support.design.widget.TextInputLayout>

                <Button
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:textSize="10dp"
                    android:id="@+id/getcode"
                    android:layout_toRightOf="@+id/textInputLayout"
                    android:layout_toEndOf="@+id/textInputLayout"
                    android:text="@string/prompt_code"
                    android:layout_alignParentTop="true"
                    android:background="@drawable/round_bg"/>
            </RelativeLayout>


            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_regist"
                android:imeOptions="actionDone"
                android:background="@drawable/round_bg"
                android:textStyle="bold" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="5dp">

                <TextView
                    android:text="@string/cannot_regist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:id="@+id/textView2" />

                <TextView
                    android:text="@string/agreement"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/textView2"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:id="@+id/textView3" />
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
