<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@drawable/uc_background"
                android:orientation="vertical"
                android:paddingBottom="4dp"
                >

                <LinearLayout
                    android:id="@+id/user_info"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:orientation="vertical"
                    android:visibility="visible"
                    android:layout_marginTop="30dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="100dp" >

                        <ImageView
                            android:id="@+id/user_img"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:contentDescription="@string/avatar"
                            android:src="@mipmap/head_tu"
                            android:layout_centerVertical="true"
                            android:layout_centerHorizontal="true" />


                    </RelativeLayout>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="#20000000"
                    android:orientation="horizontal"
                    android:paddingBottom="3dp"
                    android:paddingTop="5dp" >

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="0"
                            android:textColor="@color/white"
                            android:id="@+id/lv" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="5dp"
                            android:textColor="@color/white"
                            android:id="@+id/name"
                            android:text="用户名" />
                    </LinearLayout>

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="7dp"
                        android:layout_marginTop="7dp"
                        android:background="@color/white" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="0"
                            android:textColor="@color/white"
                            android:id="@+id/money" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="5dp"
                            android:textColor="@color/white"
                            android:text="用户余额" />
                    </LinearLayout>

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="7dp"
                        android:layout_marginTop="7dp"
                        android:background="@color/white" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="0"
                            android:textColor="@color/white" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="5dp"
                            android:text="用户积分"
                            android:textColor="@color/white" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:id="@+id/uc_0">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="16dp"
                    android:src="@mipmap/order_search" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:text="我的订单"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:src="@mipmap/arrow_expend_right" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/usercenter_linear"
                android:orientation="horizontal"
                >


                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/uc_1">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:src="@mipmap/uc_daifukuan"
                        android:id="@+id/my_order_imageView1"
                        android:padding="5dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:padding="2dp"
                        android:text="待付款"
                        android:textSize="10dp"
                        android:layout_gravity="bottom|center"
                        />
                </LinearLayout>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/uc_2">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:src="@mipmap/uc_shouhuo"
                        android:id="@+id/my_order_imageView2"
                        android:padding="5dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:padding="2dp"
                        android:text="待确认"
                        android:textSize="10dp"
                        android:layout_gravity="bottom|center"
                        />
                </LinearLayout>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/uc_3">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:src="@mipmap/uc_pingjia"
                        android:id="@+id/my_order_imageView3"
                        android:padding="5dp"
                        android:layout_gravity="center"
                        android:layout_marginRight="16dp"
                        android:layout_marginLeft="16dp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:padding="2dp"
                        android:text="待评价"
                        android:textSize="10dp"
                        android:layout_gravity="bottom|center"
                        />
                </LinearLayout>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/uc_4">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:src="@mipmap/uc_tuikuan"
                        android:id="@+id/my_order_imageView4"
                        android:padding="5dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:padding="2dp"
                        android:text="投诉/退款"
                        android:textSize="10dp"
                        android:layout_gravity="bottom|center"
                        />
                </LinearLayout>

            </LinearLayout>



            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/lightgrey"
                android:layout_marginTop="5dp" />



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:id="@+id/ucenter_address">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="16dp"
                    android:src="@mipmap/addressmanage" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:text="@string/addressManage"
                    android:textColor="@color/black" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:src="@mipmap/arrow_expend_right" />

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/lightgrey"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:id="@+id/ucenter_chongzhi">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="16dp"
                    android:src="@mipmap/coupons" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:text="@string/chongzhi"
                    android:textColor="@color/black" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:src="@mipmap/arrow_expend_right" />

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/lightgrey"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="10dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:id="@+id/ucenter_massage">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="16dp"
                    android:src="@mipmap/my_massage" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:text="@string/mymassage"
                    android:textColor="@color/black" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:src="@mipmap/arrow_expend_right" />

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/lightgrey" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:id="@+id/ucenter_safe">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="16dp"
                    android:src="@mipmap/accountsecure" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:text="@string/zhanghaoanquan"
                    android:textColor="@color/black" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:src="@mipmap/arrow_expend_right" />

            </LinearLayout>
        </LinearLayout>

    </ScrollView>
</LinearLayout>
